{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 228,
  "lineage": "62f5e975-6fe8-aaee-52db-34a970920cee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tier-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06fff140d769ef31a",
            "domain": "vpc",
            "id": "eipalloc-06fff140d769ef31a",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-200-144-171.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.144.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tier-eip"
            },
            "tags_all": {
              "Name": "tier-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tier-ec2-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e2f9fa7597680a",
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:instance/i-0a863b89345e90483",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a863b89345e90483",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tier-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fdfa1aaf37e85a04",
            "private_dns": "ip-10-0-1-240.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.240",
            "public_ip": "43.201.47.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e55cddb29036912",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da56ed0c64125824",
            "tags": {
              "Name": "tier-bastion"
            },
            "tags_all": {
              "Name": "tier-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-014add3ee1119f2fd"
            ]
          },
          "dependencies": [
            "aws_security_group.tier-sg-pub-bastion",
            "aws_subnet.public-a",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tier-ec2-pri-a-db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e2f9fa7597680a",
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:instance/i-061dc55031dfb1d1b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061dc55031dfb1d1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tier-db-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07412b67a0e23cef3",
            "private_dns": "ip-10-0-7-188.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00530377d141e1767",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fa3a97dc0210e75",
            "tags": {
              "Name": "db1"
            },
            "tags_all": {
              "Name": "db1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b05fb10021457574"
            ]
          },
          "dependencies": [
            "aws_security_group.tier-sg-pri-db",
            "aws_security_group.tier-sg-pub-bastion",
            "aws_subnet.db-sub-a",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tier-ec2-pri-c-db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e2f9fa7597680a",
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:instance/i-0e0218d7f1f20421f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e0218d7f1f20421f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tier-db-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03e6b29032e5ac603",
            "private_dns": "ip-10-0-8-19.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ce43aebe26aff1a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ae5e23dfe9b9e11",
            "tags": {
              "Name": "db2"
            },
            "tags_all": {
              "Name": "db2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b05fb10021457574"
            ]
          },
          "dependencies": [
            "aws_security_group.tier-sg-pri-db",
            "aws_security_group.tier-sg-pub-bastion",
            "aws_subnet.db-sub-c",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tier-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:internet-gateway/igw-0f442d5d0ef8d590c",
            "id": "igw-0f442d5d0ef8d590c",
            "owner_id": "769628847648",
            "tags": {
              "Name": "tier-igw"
            },
            "tags_all": {
              "Name": "tier-igw"
            },
            "vpc_id": "vpc-00336460c969480d1"
          },
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tier-alb-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:loadbalancer/app/tier-alb-web/e8a8b549ae93204d",
            "arn_suffix": "app/tier-alb-web/e8a8b549ae93204d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tier-alb-web-208173197.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:loadbalancer/app/tier-alb-web/e8a8b549ae93204d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tier-alb-web",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05d7e55b2a7c31909"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c4158e43955a49fc"
              },
              {
                "subnet_id": "subnet-0da56ed0c64125824"
              }
            ],
            "subnets": [
              "subnet-0c4158e43955a49fc",
              "subnet-0da56ed0c64125824"
            ],
            "tags": {
              "Name": "tier-alb-web"
            },
            "tags_all": {
              "Name": "tier-alb-web"
            },
            "vpc_id": "vpc-00336460c969480d1",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.tier-sg-alb-web",
            "aws_subnet.public-a",
            "aws_subnet.public-c",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tier-nlb-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:loadbalancer/net/tier-nlb-was/3aae8a52ddc30b4e",
            "arn_suffix": "net/tier-nlb-was/3aae8a52ddc30b4e",
            "dns_name": "tier-nlb-was-3aae8a52ddc30b4e.elb.ap-northeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:loadbalancer/net/tier-nlb-was/3aae8a52ddc30b4e",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "tier-nlb-was",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06fe5423f783939a8"
              },
              {
                "subnet_id": "subnet-091f97c7a7a5c81a0"
              }
            ],
            "subnets": [
              "subnet-06fe5423f783939a8",
              "subnet-091f97c7a7a5c81a0"
            ],
            "tags": {
              "Name": "tier-nlb-was"
            },
            "tags_all": {
              "Name": "tier-nlb-was"
            },
            "vpc_id": "vpc-00336460c969480d1",
            "zone_id": "ZIBE1TIR4HY56"
          },
          "dependencies": [
            "aws_subnet.web-sub-a",
            "aws_subnet.web-sub-c",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tier-a-listener-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:listener/app/tier-alb-web/e8a8b549ae93204d/fb02ebf9101fb22e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:targetgroup/tier-a-target-web/fe18a39592dff8ef",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:listener/app/tier-alb-web/e8a8b549ae93204d/fb02ebf9101fb22e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:loadbalancer/app/tier-alb-web/e8a8b549ae93204d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tier-alb-web",
            "aws_lb_target_group.tier-a-target-web",
            "aws_security_group.tier-sg-alb-web",
            "aws_subnet.public-a",
            "aws_subnet.public-c",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tier-n-listner-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:listener/net/tier-nlb-was/3aae8a52ddc30b4e/503f71ef08b58dbb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:targetgroup/tier-n-target-was/6eaa99ec717e779f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:listener/net/tier-nlb-was/3aae8a52ddc30b4e/503f71ef08b58dbb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:loadbalancer/net/tier-nlb-was/3aae8a52ddc30b4e",
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tier-nlb-was",
            "aws_lb_target_group.tier-n-target-was",
            "aws_subnet.web-sub-a",
            "aws_subnet.web-sub-c",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tier-a-target-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:targetgroup/tier-a-target-web/fe18a39592dff8ef",
            "arn_suffix": "targetgroup/tier-a-target-web/fe18a39592dff8ef",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:targetgroup/tier-a-target-web/fe18a39592dff8ef",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tier-a-target-web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tier-target-web"
            },
            "tags_all": {
              "Name": "tier-target-web"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00336460c969480d1"
          },
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tier-n-target-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:targetgroup/tier-n-target-was/6eaa99ec717e779f",
            "arn_suffix": "targetgroup/tier-n-target-was/6eaa99ec717e779f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:769628847648:targetgroup/tier-n-target-was/6eaa99ec717e779f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "tier-n-target-was",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "tier-n-target-was"
            },
            "tags_all": {
              "Name": "tier-n-target-was"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00336460c969480d1"
          },
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tier-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06fff140d769ef31a",
            "connectivity_type": "public",
            "id": "nat-015f86942102f2433",
            "network_interface_id": "eni-05a3c606f380904fe",
            "private_ip": "10.0.1.146",
            "public_ip": "43.200.144.171",
            "subnet_id": "subnet-0da56ed0c64125824",
            "tags": {
              "Name": "tier-nat"
            },
            "tags_all": {
              "Name": "tier-nat"
            }
          },
          "dependencies": [
            "aws_eip.tier-eip",
            "aws_subnet.public-a",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tier-r-pri-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3da2719bbbd7e191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-015f86942102f2433",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3da2719bbbd7e19",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tier-eip",
            "aws_nat_gateway.tier-nat",
            "aws_route_table.tier-rt-pri-web",
            "aws_subnet.public-a",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tier-r-pub-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f442d5d0ef8d590c",
            "id": "r-rtb-078f613d7a7f423b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078f613d7a7f423b6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tier-igw",
            "aws_route_table.tier-rt-pub",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tier-rt-pri-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:route-table/rtb-0f3da2719bbbd7e19",
            "id": "rtb-0f3da2719bbbd7e19",
            "owner_id": "769628847648",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tier-rt-pri-web"
            },
            "tags_all": {
              "Name": "tier-rt-pri-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-00336460c969480d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tier-rt-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:route-table/rtb-078f613d7a7f423b6",
            "id": "rtb-078f613d7a7f423b6",
            "owner_id": "769628847648",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tier-rt-pub"
            },
            "tags_all": {
              "Name": "tier-rt-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-00336460c969480d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tier-rtass-pri-a-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0988427d9d1d9caa3",
            "route_table_id": "rtb-0f3da2719bbbd7e19",
            "subnet_id": "subnet-091f97c7a7a5c81a0"
          },
          "dependencies": [
            "aws_eip.tier-eip",
            "aws_nat_gateway.tier-nat",
            "aws_route.tier-r-pri-web",
            "aws_route_table.tier-rt-pri-web",
            "aws_subnet.public-a",
            "aws_subnet.web-sub-a",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tier-rtass-pri-c-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08892a9deea628461",
            "route_table_id": "rtb-0f3da2719bbbd7e19",
            "subnet_id": "subnet-06fe5423f783939a8"
          },
          "dependencies": [
            "aws_eip.tier-eip",
            "aws_nat_gateway.tier-nat",
            "aws_route.tier-r-pri-web",
            "aws_route_table.tier-rt-pri-web",
            "aws_subnet.public-a",
            "aws_subnet.web-sub-c",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tier-rtass-pub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bad77678a600bacc",
            "route_table_id": "rtb-078f613d7a7f423b6",
            "subnet_id": "subnet-0da56ed0c64125824"
          },
          "dependencies": [
            "aws_route_table.tier-rt-pub",
            "aws_subnet.public-a",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tier-rtass-pub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4ad762db0b25b85",
            "route_table_id": "rtb-078f613d7a7f423b6",
            "subnet_id": "subnet-0c4158e43955a49fc"
          },
          "dependencies": [
            "aws_route_table.tier-rt-pub",
            "aws_subnet.public-c",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tier-sg-alb-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:security-group/sg-05d7e55b2a7c31909",
            "description": "tier-sg-alb-web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d7e55b2a7c31909",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tier-sg-alb-web",
            "name_prefix": "",
            "owner_id": "769628847648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tier-sg-alb-web"
            },
            "tags_all": {
              "Name": "tier-sg-alb-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-00336460c969480d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tier-sg-pri-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:security-group/sg-0b05fb10021457574",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b05fb10021457574",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014add3ee1119f2fd"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tier-sg-pri-db",
            "name_prefix": "",
            "owner_id": "769628847648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tier-sg-pri-db"
            },
            "tags_all": {
              "Name": "tier-sg-pri-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-00336460c969480d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tier-sg-pub-bastion",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tier-sg-pri-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:security-group/sg-0f8c66ee8a2c0296c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8c66ee8a2c0296c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.20.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014add3ee1119f2fd"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tier-sg-pri-was",
            "name_prefix": "",
            "owner_id": "769628847648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tier-sg-pri-was"
            },
            "tags_all": {
              "Name": "tier-sg-pri-was"
            },
            "timeouts": null,
            "vpc_id": "vpc-00336460c969480d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tier-sg-pub-bastion",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tier-sg-pri-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:security-group/sg-00f1d37aea9819a31",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f1d37aea9819a31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014add3ee1119f2fd"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tier-sg-pri-web",
            "name_prefix": "",
            "owner_id": "769628847648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tier-sg-pri-web"
            },
            "tags_all": {
              "Name": "tier-sg-pri-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-00336460c969480d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tier-sg-pub-bastion",
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tier-sg-pub-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:security-group/sg-014add3ee1119f2fd",
            "description": "tier-sg-pub-bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014add3ee1119f2fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tier-sg-pub-bastion",
            "name_prefix": "",
            "owner_id": "769628847648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tier-sg-pub-bastion"
            },
            "tags_all": {
              "Name": "tier-sg-pub-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-00336460c969480d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:subnet/subnet-07fa3a97dc0210e75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fa3a97dc0210e75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769628847648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tier-db-sub-a"
            },
            "tags_all": {
              "Name": "tier-db-sub-a"
            },
            "vpc_id": "vpc-00336460c969480d1"
          },
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-sub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:subnet/subnet-07ae5e23dfe9b9e11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ae5e23dfe9b9e11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769628847648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tier-db-sub-c"
            },
            "tags_all": {
              "Name": "tier-db-sub-c"
            },
            "vpc_id": "vpc-00336460c969480d1"
          },
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:subnet/subnet-0da56ed0c64125824",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da56ed0c64125824",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "769628847648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tier-public-a"
            },
            "tags_all": {
              "Name": "tier-public-a"
            },
            "vpc_id": "vpc-00336460c969480d1"
          },
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:subnet/subnet-0c4158e43955a49fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4158e43955a49fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "769628847648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tier-public-c"
            },
            "tags_all": {
              "Name": "tier-public-c"
            },
            "vpc_id": "vpc-00336460c969480d1"
          },
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "was-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:subnet/subnet-00d045255267bf54d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d045255267bf54d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769628847648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tier-was-sub-a"
            },
            "tags_all": {
              "Name": "tier-was-sub-a"
            },
            "vpc_id": "vpc-00336460c969480d1"
          },
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "was-sub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:subnet/subnet-0649aab7fc48767ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0649aab7fc48767ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769628847648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tier-was-sub-c"
            },
            "tags_all": {
              "Name": "tier-was-sub-c"
            },
            "vpc_id": "vpc-00336460c969480d1"
          },
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:subnet/subnet-091f97c7a7a5c81a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091f97c7a7a5c81a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769628847648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tier-web-sub-a"
            },
            "tags_all": {
              "Name": "tier-web-sub-a"
            },
            "vpc_id": "vpc-00336460c969480d1"
          },
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-sub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:subnet/subnet-06fe5423f783939a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fe5423f783939a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769628847648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tier-web-sub-c"
            },
            "tags_all": {
              "Name": "tier-web-sub-c"
            },
            "vpc_id": "vpc-00336460c969480d1"
          },
          "dependencies": [
            "aws_vpc.tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:769628847648:vpc/vpc-00336460c969480d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09787070392df9730",
            "default_route_table_id": "rtb-0748b7182262f0fb4",
            "default_security_group_id": "sg-0998eb71e4666ef64",
            "dhcp_options_id": "dopt-07c750b41d3a81caa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00336460c969480d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0748b7182262f0fb4",
            "owner_id": "769628847648",
            "tags": {
              "Name": "tier-vpc"
            },
            "tags_all": {
              "Name": "tier-vpc"
            }
          }
        }
      ]
    }
  ]
}